# unlock.mox.si

./: .env.templete  .gitignore  README.md  compose.yaml
api/: Cargo.toml
api/src/: domain.rs  lib.rs  main.rs
api/src/controller/: open.rs
api/src/domain/: config.rs  switch_bot.rs
api/src/domain/switch_bot/: random.rs  service.rs
docker/api/: Dockerfile
