[package]
name = "unlock-mox-si-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
hmac = "0.12.1"
hex-literal = "0.3.4"
sha2 = "0.10.6"
chrono = "0.4.22"
base64 = "0.13.0"
rand = "0.8.5"
